# strips

./: .env.docker.example  .gitignore  docker-compose.yml  readme.md  test
backend/: .dockerignore  .env.example  Dockerfile  README.md  _query_tree.py  pyproject.toml  requirements-seed.txt
backend/app/: auth.py  config.py  db.py  deps.py  errors.py  main.py  storage.py
backend/app/routers/: __init__.py  auth.py  dashboard_activity.py  events.py  external_records.py  media.py  members.py  parents.py  people.py  stats.py  timeline.py  trees.py  unions.py
backend/app/schemas/: __init__.py  auth.py  dashboard_activity.py  event.py  external_record.py  media.py  member.py  person.py  relations.py  stats.py  timeline.py  tree.py  union.py
backend/app/services/: dashboard_activity.py  events.py  external_records.py  helpers.py  media.py  members.py  parents.py  people.py  stats.py  timeline.py  trees.py  unions.py
backend/db/migrations/: 0001_extensions_and_enums.sql  0002_profiles_and_trees.sql  0003_persons.sql  0004_relationships.sql  0005_events_and_media.sql  0007_rls_policies.sql  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_auth_decode.py  test_dashboard_activity.py  test_external_records.py  test_helpers.py  test_media.py  test_members.py  test_people.py  test_rls.py  test_routers_auth_trees.py  test_routers_dashboard_activity.py  test_routers_external_records.py  test_routers_media.py  test_routers_members.py  test_routers_people.py  test_routers_timeline.py  test_routers_unions_events.py  test_schemas.py  test_storage.py  test_timeline.py  test_unions.py
(+52 files in other folders)
