[project]
name = "stirps-backend"
version = "0.1.0"
description = "Stirps — backend API (FastAPI sobre PostgreSQL/Supabase)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary,pool]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
